# NotAppNotWevNotDB

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Settings.toml  app.yaml  diesel.toml  index3.html  package-lock.json  package.json  style3.css
.github/workflows/: main.yml
migrations/2020-12-13-193745_init/: down.sql  up.sql
migrations/2020-12-18-230546_user_session/: down.sql  up.sql
migrations/2020-12-21-122142_cart/: down.sql  up.sql
migrations/2020-12-25-203555_address_user_id_not_null/: down.sql  up.sql
migrations/2020-12-25-213435_orders_address_id_not_null/: down.sql  up.sql
src/: App.vue  errors.rs  lib.rs  main.js  main.rs  models.rs  oldmodels.rs  response.rs  schema.rs
src/components/cart/: cart.vue  cart_item.vue  v-cart-item.vue  v-cart.vue
src/components/catalog/: v-catalog.vue
src/components/products/: product-card.vue  products.vue
src/components/start/: lolce.vue  product.js
src/db/: cart.rs  mod.rs  orders.rs  products.rs  users.rs
src/filters/: toFix.js
src/models/: courier.rs  mod.rs  order.rs  product.rs  transport.rs  user.rs
src/router/: index.js
src/routes/: cart.rs  mod.rs  orders.rs  products.rs  users.rs
src/vuex/: store.js
src/vuex/actions/: api-requests.js
src/vuex/mutations/: mutations.js
web/: README.md  index.html  package-lock.json  package.json
web/src/: main.js
web/src/components/auth/: SignIn.vue  SignUp.vue
web/src/components/cart/: v-cart-item.vue  v-cart.vue
web/src/components/catalog/: v-catalog-item.vue  (+2 more)
web/src/router/: router.js
web/src/vuex/: store.js
(+9 files in other folders)
